# src/routes/v1/access/index.ts
@@ -10,11 +10,8 @@ import { Router } from "express";
 // import { loginSchema, registerSchema } from "../../validation/user";
 const route = Router();
 
-route.get("/shop", (req, res) => {
-   return res.json({
-    msg: 'ssss'
-  })
-});
+route.post("/shop/signup", accessController.signup);
+
 // route.post("/login", validateRequest(loginSchema), loginUser);
 // route.post("/forgot-password", forgotPassword);
 // route.post("/reset-password", resetPassword);
